--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/* JEJEJE */
 body {
   margin: 0;
   font-family: 'Inter', sans-serif;
@@ -405,4 +406,5 @@ input[type="checkbox"] {
   height: 20px;
   transform: scale(1.3); /* aumenta tamaño en general */
   cursor: pointer;
+
 }
